--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <body>
+     <div class="container">
+      <form action="" class="form">
+        <input type="text" name="input" placeholder="Search images..."/>
+        <button class="btn" type="submit">Search</button>
+      </form>
+      <ul class="gallery"></ul>
+<div class="div"></div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
